fix sidebar collapse on main contain

--- a/brisk-frontend/src/components/Dashboard.css
+++ b/brisk-frontend/src/components/Dashboard.css
@@ -39,7 +39,7 @@
 }
 
 .create{
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .dlabel {
@@ -151,6 +151,8 @@
 .sidebar {
     width: 250px;
     background-color: #333;
+    overflow-y: auto;
+    position: fixed;
     color: #fff;
     height: 100vh;
     padding: 20px;
@@ -256,4 +258,14 @@
 
 .transaction-table td {
     text-align: center;
+}
+
+.dashboard-container {
+    display: flex;
+}
+
+.main-content {
+    margin-left: 270px;
+    padding: 20px;
+    flex-grow: 1;
 }
